@@ -352,6 +352,7 @@
 			  <property name="has_frame">True</property>
 			  <property name="invisible_char">●</property>
 			  <property name="activates_default">False</property>
+			  <signal name="editing_done" handler="on_settings_changed" last_modification_time="Wed, 22 Aug 2007 17:08:38 GMT"/>
 			</widget>
 			<packing>
 			  <property name="padding">6</property>
@@ -687,6 +688,7 @@
 		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 		  <property name="inverted">False</property>
 		  <property name="adjustment">0 0 120 0 0 0</property>
+		  <signal name="value_changed" handler="on_settings_changed" last_modification_time="Wed, 22 Aug 2007 17:17:01 GMT"/>
 		</widget>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -707,6 +709,7 @@
 		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 		  <property name="inverted">False</property>
 		  <property name="adjustment">0 0 127 0 0 0</property>
+		  <signal name="value_changed" handler="on_settings_changed" last_modification_time="Wed, 22 Aug 2007 16:53:55 GMT"/>
 		</widget>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -727,6 +730,7 @@
 		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 		  <property name="inverted">False</property>
 		  <property name="adjustment">0 0 120 0 0 0</property>
+		  <signal name="value_changed" handler="on_settings_changed" last_modification_time="Wed, 22 Aug 2007 17:07:59 GMT"/>
 		</widget>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -747,6 +751,7 @@
 		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 		  <property name="inverted">False</property>
 		  <property name="adjustment">0 0 127 0 0 0</property>
+		  <signal name="value_changed" handler="on_settings_changed" last_modification_time="Wed, 22 Aug 2007 16:53:40 GMT"/>
 		</widget>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -829,14 +834,14 @@
 	  <property name="spacing">0</property>
 
 	  <child>
-	    <widget class="GtkButton" id="btnActivate">
+	    <widget class="GtkButton" id="btnInfo">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label">gtk-apply</property>
+	      <property name="label">gtk-about</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
-	      <signal name="clicked" handler="on_btnActivate_clicked" last_modification_time="Thu, 09 Aug 2007 13:30:35 GMT"/>
+	      <signal name="clicked" handler="on_btnInfo_clicked" last_modification_time="Wed, 22 Aug 2007 17:11:53 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
