@@ -8,6 +8,9 @@ Changelog for BlueProximity
 - modified: gnome screensaver now locks the screen no matter what its settings say (Bug #1778306)
 - modified: new program info dialog accessable via icon's context menu (Bug #1776732)
 - modified: preferences dialog now has a proper icon (Bug #1776732)
+- modified: preferences dialog now accessable via 'preferences' entry in icon's context menu (Bug #1776732)
+- modified: preferences dialog now does autosave and autoactivate values - changes are active immediately (Bug #1776732)
+- modified: info replaces old apply button which was no longer needed (Bug #1776732)
 
 1.1 "see what's coming" - released 2007-08-18
 - fixed: icon shows connecting process
